constraints.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 12
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
#      topologySpreadConstraints:
#        - topologyKey: topology.kubernetes.io/project
#          maxSkew: 1
#          whenUnsatisfiable: DoNotSchedule
#          labelSelector:
#            matchLabels:
#              app: nginx
      containers:
        - name: nginx
          image: nginx:1.15
          ports:
            - containerPort: 80
