ephemeral-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2

#kubectl debug -it nginx -c nginx image=
