namespaces.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
  namespace: test
  labels:
    environment: dev
    project: example1
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
