node-scale-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: app
      image: nginx
      resources:
        requests:
          memory: "2000Mi"
          cpu: "50m"
        limits:
          memory: "2100Mi"
          cpu: "200m"
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
spec:
  containers:
    - name: app
      image: nginx
      resources:
        requests:
          memory: "2000Mi"
          cpu: "50m"
        limits:
          memory: "2100Mi"
          cpu: "200m"
