node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
  nodeSelector:
    - groupType: default
