sample.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: webapplication
spec:
  containers:
    - name: webapp1
      image: nginx:1.14.2
      ports:
        - containerPort: 80
    - name: webapp2
      image: nginx:1.14.2
      ports:
        - containerPort: 8080
