volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volumes-demo
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
    - name: debug
      image: rkalluru/learnk8s:rhel9-bare
      volumeMounts:
        - mountPath: /mnt
          name: html

  volumes:
    - name: html
      emptyDir: {}
