Service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-01
  labels:
    name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: webapplication
spec:
  containers:
    - name: debug
      image: rkalluru/learnk8s:rhel9-bare
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cip
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
